--- a/src/app/pages/categeories/components/edit-class-to-category/edit-class-to-category.component.html
+++ b/src/app/pages/categeories/components/edit-class-to-category/edit-class-to-category.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title pull-left">Add Class</h4>
+  <h4 class="modal-title pull-left">Edit Class</h4>
   <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -36,5 +36,5 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-    <button type="button" class="btn btn-primary" (click)="onSubmit()">Create</button>
+    <button type="button" class="btn btn-primary" (click)="onSubmit()">Update</button>
   </div>
